<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".StartActivity">

    <RelativeLayout
        android:id="@+id/r1"
        android:layout_width="match_parent"
        android:layout_height="442dp"
        android:layout_alignParentStart="true"
        android:layout_alignParentTop="true">

        <View
            android:id="@+id/view"
            android:layout_width="wrap_content"
            android:layout_height="277dp"
            android:layout_alignParentStart="true"
            android:layout_alignParentTop="true"
            android:background="#ffe082" />


        <ImageView
            android:id="@+id/imageView2"
            android:layout_width="276dp"
            android:layout_height="313dp"
            android:layout_alignEnd="@+id/imageView4"
            android:layout_alignTop="@+id/imageView4"
            app:srcCompat="@drawable/sa" />

        <ImageView
            android:id="@+id/imageView4"
            android:layout_width="wrap_content"
            android:layout_height="286dp"
            android:layout_alignParentTop="true"
            android:layout_centerHorizontal="true"
            android:layout_marginTop="112dp"
            android:background="@drawable/shadow"
            android:contentDescription="@string/logo"
            app:srcCompat="@drawable/su" />

        <ImageView
            android:id="@+id/imageView3"
            android:layout_width="229dp"
            android:layout_height="195dp"
            android:layout_alignParentTop="true"
            android:layout_centerHorizontal="true"
            android:layout_marginTop="152dp"
            android:contentDescription="@string/logo"
            app:srcCompat="@drawable/logo" />

    </RelativeLayout>

    <RelativeLayout
        android:id="@+id/r2"
        android:layout_width="match_parent"
        android:layout_height="238dp"
        android:layout_alignParentBottom="true"
        android:layout_alignParentStart="true">

        <Button
            android:id="@+id/buttonTop"
            android:layout_width="254dp"
            android:layout_height="60dp"
            android:layout_alignParentTop="true"
            android:layout_centerHorizontal="true"
            android:layout_marginTop="40dp"
            android:background="@drawable/button"
            android:fontFamily="sans-serif"
            android:text="@string/login1"
            android:textColor="@color/black"
            android:textSize="18sp"
            android:textStyle="bold"
            android:typeface="normal"
            tools:text="Sign In" />

        <Button
            android:id="@+id/button"
            android:layout_width="252dp"
            android:layout_height="62dp"
            android:layout_alignParentBottom="true"
            android:layout_centerHorizontal="true"
            android:layout_marginBottom="52dp"
            android:background="@drawable/button"
            android:fontFamily="sans-serif"
            android:text="@string/register"
            android:textColor="@color/black"
            android:textSize="18sp"
            android:textStyle="bold"
            android:typeface="normal" />

    </RelativeLayout>



</RelativeLayout>